aws_projects/terraform_projects/ansible_template/ansible-securitygroup.tf
# Define security group for public subnet
resource "aws_security_group" "sql-sg" {
  vpc_id = "${aws_vpc.main.id}"
  name = "SQL-SG"
  description = "Allow incoming HTTP connections & SSH access"

  ingress {
    from_port = 3306
    to_port = 3306
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "SQL Server SG"
  }
}

# Create new aws security group application instance
# Only HTTP, HTTPS, and SSH ports outside
resource "aws_security_group" "app-sg" {
  name = "App Security Group"
  description = "For web and ssh access"
  vpc_id = "${aws_vpc.main.id}"
    
  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "app-sg"
  } 
}
